--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,6 @@ org.gradle.daemon=false
 # https://github.com/StandoByte/RotP-maven/commits/main
 main_mod_version=1.16.5-0.2.2-pre7-snapshot-250318-a
 camera_version=1.0.14
+
+playeranim_version = 0.4.0+1.16.5
+bendylib_version = 1.2.2
