--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
-version = '1.0'
+version = '0.1'
 group = 'com.zeml.rotp_zthm' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'RotP-Extra Hamon Stands'
 
@@ -117,6 +117,10 @@ repositories {
         name "Curse Maven"
         url 'https://cursemaven.com'
     }
+    maven {
+        name "KosmX's maven"
+        url 'https://maven.kosmx.dev/'
+    }
 }
 
 dependencies {
@@ -127,6 +131,8 @@ dependencies {
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     testAnnotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     implementation fg.deobf("maven.modrinth:ripples-of-the-past-hermit-purple-addon:1.3.3d")
+    implementation fg.deobf("dev.kosmx.player-anim:player-animation-lib-forge:${playeranim_version}")
+    implementation fg.deobf("io.github.kosmx.bendy-lib:bendy-lib-forge:${bendylib_version}")
 }
 
 mixin{
@@ -138,9 +144,9 @@ mixin{
 jar {
     manifest {
         attributes([
-                "Specification-Title": "RotP_HermitoPurple",
-                "Specification-Vendor": "RotP_HPZeml",
-                "Specification-Version": "Beta 1", // We are version 1 of ourselves
+                "Specification-Title": "RotP_Extra Hamon Sands",
+                "Specification-Vendor": "RotP_Extra Hamon Sands",
+                "Specification-Version": "0.1", // We are version 1 of ourselves
                 "Implementation-Title": project.name,
                 "Implementation-Version": "Beta 1",
                 "Implementation-Vendor" :"RotP_HPZeml",
